<resources>
    <string name="app_name">Quiz</string>
    <string name="database">Database</string>
    <string name="quizz">Quizz</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="from_gallery">From Gallery</string>
    <string name="camera">Camera</string>
    <string name="good_job">Good Job!</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="quit">Quit</string>
    <string name="next">Next</string>
    <string name="todo">TODO</string>
</resources>
